Add problem abc_studioamico

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 	<style>body{margin:0}iframe{display:block;background:transparent;border:none;height:100vh;width:100vw}</style>
-	<iframe src="https://leadoii.now.sh/leaderboard?u=Andrei&u=IvanSpaccatrosi&u=bigsheep&u=Damiano&u=pazzoeo&u=DavideSpanti&u=Enricobelli00&u=Frap&u=Francesco02&u=AlessandroD&u=madeve&u=Nhix&u=LeonardoVico&u=fortytwo&u=Arturo&u=ByAxeel&u=carlo_malagnino&u=pietro&u=Giulio&u=AntonioCap&u=SimoneDC01&u=dartesco&u=Rikart&u=RobertB.&u=Mattia23&u=LarisaMarincas&u=crasherlord&u=Luca&u=chiaradea03&u=AndreaDottavio&p=eas1&p=easy2&p=easy3&p=turni&p=domino&p=ois_jumps&p=abc_previsioni&p=ois_wordsearch&p=tris" sandbox="allow-same-origin allow-scripts allow-pointer-lock"></iframe>
+	<iframe src="https://leadoii.now.sh/leaderboard?u=Andrei&u=IvanSpaccatrosi&u=bigsheep&u=Damiano&u=pazzoeo&u=DavideSpanti&u=Enricobelli00&u=Frap&u=Francesco02&u=AlessandroD&u=madeve&u=Nhix&u=LeonardoVico&u=fortytwo&u=Arturo&u=ByAxeel&u=carlo_malagnino&u=pietro&u=Giulio&u=AntonioCap&u=SimoneDC01&u=dartesco&u=Rikart&u=RobertB.&u=Mattia23&u=LarisaMarincas&u=crasherlord&u=Luca&u=chiaradea03&u=AndreaDottavio&p=eas1&p=easy2&p=easy3&p=turni&p=domino&p=ois_jumps&p=abc_previsioni&p=ois_wordsearch&p=tris&p=abc_studioamico" sandbox="allow-same-origin allow-scripts allow-pointer-lock"></iframe>
 </body>
 </html>
