--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style>
       body{background-color:#f2f2f2;letter-spacing:.04em}.container{margin-top:30px;max-width:500px}.card{overflow:auto}.waves-effect{width:100%}.subheader{font-size:1rem;font-weight:500;line-height:1.5rem;margin:.75rem 16px}.list-divider{border:0;height:1px;overflow:hidden;background-color:#e0e0e0;margin-right:16px;margin-left:75px}.list{margin:0}.list li{padding:0 16px}.list li .valign-wrapper{min-height:72px}.list i.circle{padding:10px;background-color:rgba(0,0,0,.26)}.list .title span{color:rgba(0,0,0,.54)}.ml-auto{margin-left:auto}i.ml-auto{color:rgba(0,0,0,.26)}
     </style>
-    
+
     <div class="container">
       <div class="card">
         <h3 class="subheader">Leaderboards</h3>
@@ -48,6 +48,9 @@
         const response = await fetch('https://api.github.com/repos/simonepri/leadoii-static/contents/');
         const data = await response.json();
         for (let file of data) {
+          if (file.type != 'dir') {
+            continue;
+          }
           var o  = createListElement(file.name, file.path);
           console.log(o);
           listObj.appendChild(o);
