Update problems list for latium 2019 leaderboard

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -18,6 +18,10 @@
 			'easy1',
 			'easy2',
 			'easy3',
+			'ois_annoluce',
+			'cercalesomme',
+			'galattici',
+			'ois_filiale',
 		]
 		var users = [
 			'gpaolodatu',
