--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <title>Pre-Generated Leaderboard of the Italian Olympiads of Informatics Training Platform</title>
+    <title>Pre-Generated Leaderboards of the Italian Olympiads of Informatics Training Platform Users</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="theme-color" content="#424242" />
