Update problems list for latium 2019 leaderboard

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -22,6 +22,9 @@
 			'cercalesomme',
 			'galattici',
 			'ois_filiale',
+			'distributori',
+			'zigzag',
+			'ois_filiali',
 		]
 		var users = [
 			'gpaolodatu',
