Update participants list

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -60,6 +60,13 @@
 			'Eleonora',
 			'michelefia196',
 			'Cigo',
+			'Federico',
+			'LucaVita7',
+			'Barabba',
+			'beatriceiafrati',
+			'LoricGarde',
+			'Ale132',
+			'Alessio28',
 		]
 		var link = 'https://leadoii.now.sh/leaderboard' + '?u=' + users.join('&u=') + '&p=' + problems.join('&p=');
 
