Update participants list

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -49,7 +49,6 @@
 			'josephine.balan',
 			'tommaso907',
 			'Mirans8',
-			'emanuele_lanuti',
 			'gabrimat1',
 			'Makimass',
 			'Punch',
@@ -67,6 +66,7 @@
 			'LoricGarde',
 			'Ale132',
 			'Alessio28',
+			'LolloGiulianell',
 		]
 		var link = 'https://leadoii.now.sh/leaderboard' + '?u=' + users.join('&u=') + '&p=' + problems.join('&p=');
 
