Update problems list for latium 2019 leaderboard

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -21,10 +21,10 @@
 			'ois_annoluce',
 			'cercalesomme',
 			'galattici',
-			'ois_filiale',
 			'distributori',
 			'zigzag',
 			'ois_filiali',
+			'mattoni',
 		]
 		var users = [
 			'gpaolodatu',
