Update problems list for latium 2019 leaderboard

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -67,6 +67,7 @@
 			'Ale132',
 			'Alessio28',
 			'LolloGiulianell',
+			'carlo_malagnino',
 		]
 		var link = 'https://leadoii.now.sh/leaderboard' + '?u=' + users.join('&u=') + '&p=' + problems.join('&p=');
 
