Update users list for latium 2019 leaderboard

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -49,6 +49,7 @@
 			'josephine.balan',
 			'tommaso907',
 			'Mirans8',
+			'emanule_lanuti',
 			'gabrimat1',
 			'Makimass',
 			'Punch',
@@ -68,6 +69,8 @@
 			'Alessio28',
 			'LolloGiulianell',
 			'carlo_malagnino',
+			'maatt',
+			'spurioo',
 		]
 		var link = 'https://leadoii.now.sh/leaderboard' + '?u=' + users.join('&u=') + '&p=' + problems.join('&p=');
 
