Update problems list for latium 2019 leaderboard

--- a/latium-2019/index.html
+++ b/latium-2019/index.html
@@ -20,11 +20,23 @@
 			'ois_restaurants',
 			'zigzag',
 			'distributori',
+			'trampolino',
+			'luiss_azioni',
+			'ois_potenze',
+			'costruzioni',
 			'galattici',
+			'remix',
+			'calcolatrice',
 			'cercalesomme',
 			'mattoni',
+			'sbarramento',
+			'ois_permutazione',
+			'ois_rollercoaster',
 			'ois_annoluce',
 			'ois_filiali',
+			'domino',
+			'luiss_suppli',
+			'figonacci',
 		]
 		var users = [
 			'gpaolodatu',
