--- a/public/latium-2020/index.html
+++ b/public/latium-2020/index.html
@@ -48,7 +48,7 @@
 			'Cirex02727', 
 			'SimoneStella', 
 			'andrearodante', 
-			'Tommyt'
+			'Tommyt',
 		]
 		var link = 'https://leadoii.now.sh/leaderboard' + '?u=' + users.join('&u=') + '&p=' + problems.join('&p=');
 
