--- a/public/latium-2020/index.html
+++ b/public/latium-2020/index.html
@@ -24,7 +24,7 @@
 			'ois_time', 
 			'ois_columns2', 
 			'cercalesomme', 
-			'disuguaglianze'
+			'disuguaglianze',
 		]
 		var users = [
       'Anorchish', 
