Update index.html (#1)

--- a/public/latium-2020/index.html
+++ b/public/latium-2020/index.html
@@ -14,8 +14,41 @@
 	<iframe id="iframe-body" src="" sandbox="allow-same-origin allow-scripts allow-pointer-lock"></iframe>
 	<script>
 		var problems = [
+      'easy1', 
+			'easy2', 
+			'easy3', 
+			'luiss_azioni', 
+			'ois_police', 
+			'costruzioni', 
+			'mattoni', 
+			'ois_time', 
+			'ois_columns2', 
+			'cercalesomme', 
+			'disuguaglianze',
 		]
 		var users = [
+      'Anorchish', 
+			'Simone.Scala', 
+			'Mystral', 
+			'Lor3nxin1k', 
+			'FiaccoSara', 
+			'qazwsxedc', 
+			'Giuliana.Pjetri', 
+			'_salvatorii_', 
+			'LucaB', 
+			'danpis04', 
+			'_Andrea_', 
+			'Sam99', 
+			'Francesco02', 
+			'GabrieleF', 
+			'Hightness', 
+			'LucaZhang', 
+			'AlexBarbato', 
+			'sara.lazzaroni', 
+			'Cirex02727', 
+			'SimoneStella', 
+			'andrearodante', 
+			'Tommyt',
 		]
 		var link = 'https://leadoii.now.sh/leaderboard' + '?u=' + users.join('&u=') + '&p=' + problems.join('&p=');
 
